ユーザー取得APIを2つに分離（自分と他者）
