# api/user_handler.go
@@ -77,10 +77,14 @@ func (s *Server) GetUserId(c *gin.Context) {
 }
 
 func (s *Server) GetUser(c *gin.Context) {
-	email := c.MustGet("email").(string)
+	// パスパラメータ取り出し
+	id, err := utils.StrToUUID(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	}
 
 	// 問い合わせ処理
-	row, err := s.q.GetUser(context.Background(), email)
+	row, err := s.q.GetUser(context.Background(), id)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -88,6 +92,26 @@ func (s *Server) GetUser(c *gin.Context) {
 
 	// レスポンス型バリデーション
 	err = utils.ValidateStructTwoWay[db.GetUserRow, docs.GetUsr](&row)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, row)
+}
+
+func (s *Server) GetSelf(c *gin.Context) {
+	email := c.MustGet("email").(string)
+
+	// 問い合わせ処理
+	row, err := s.q.GetSelf(context.Background(), email)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	// レスポンス型バリデーション
+	err = utils.ValidateStructTwoWay[db.GetSelfRow, docs.GetUsr](&row)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
